# cortex

./: .cortexignore.example  .gitignore  CLAUDE.md  PLAN.md  README.md  install.sh  pyproject.toml
.claude/: get_context.py  settings.json.example
.claude/docs/: SECURITY_REPORT.md  SUMMARY.md
.claude/docs/codeprep/: __init__.py.md  cli.py.md  core.py.md
.claude/docs/codeprep/analyzers/: __init__.py.md  base.py.md  dart_analyzer.py.md  go_analyzer.py.md  js_analyzer.py.md  python_analyzer.py.md
.claude/docs/codeprep/generators/: __init__.py.md  llm_summary.py.md  markdown_gen.py.md  summary_gen.py.md
.claude/docs/codeprep/miners/: __init__.py.md  cochange.py.md  git_history.py.md
.claude/docs/cortex/: __init__.py.md  __main__.py.md  cli.py.md  core.py.md  freshness.py.md  mcp_server.py.md  risk.py.md
codeprep/: __init__.py  cli.py  core.py
codeprep.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codeprep/analyzers/: base.py  go_analyzer.py  js_analyzer.py
codeprep/generators/: markdown_gen.py  summary_gen.py
codeprep/miners/: cochange.py  git_history.py
codeprep/security/: secrets_scanner.py  semgrep_runner.py
cortex/: __init__.py  __main__.py  cli.py  core.py  freshness.py  mcp_server.py  risk.py
cortex/analyzers/: dart_analyzer.py  python_analyzer.py
cortex/generators/: claude_md_gen.py  llm_summary.py  markdown_gen.py  summary_gen.py
cortex/miners/: github_prs.py
cortex/security/: bandit_runner.py  deps_scanner.py  secrets_scanner.py
docs/: docs.html  index.html
npm/: README.md  package.json
(+23 files in other folders)
